--- a/Correlation_Analyses.ipynb
+++ b/Correlation_Analyses.ipynb
@@ -12,8 +12,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*DEFINITIONS*:\n",
+    "\n",
+    "\"mup\" stands for meta-uncertainty parameter.\n",
+    "\n",
+    "\"aap\" stands for ambuguity aversion parameter.\n",
+    "\n",
+    "CPDM refers to our confidence and perceptual decision-making task.\n",
+    "\n",
+    "CRDM refers to our confidence and risky decision-making task."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.5 (v3.9.5:0a7dcbdb13, May  3 2021, 13:05:53) \n[Clang 12.0.5 (clang-1205.0.22.9)]"
   },
   "orig_nbformat": 4,
   "vscode": {
