--- a/Correlation_CloudResearch.ipynb
+++ b/Correlation_CloudResearch.ipynb
@@ -2,22 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from glob import glob\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from os.path import join\n",
-    "import math\n",
+    "import os, sys\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import pearsonr, spearmanr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,74 +72,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "#create all data frames\n",
-    "#batches 1 and 2\n",
-    "df_cdd_batch_1_2 = pd.read_csv(\"batch_1_2_cdd_metauncertainty_by_subject.csv\")\n",
-    "df_crdm_batch_1_2 = pd.read_csv(\"batch_1_2_crdm_metauncertainty_by_subject.csv\")\n",
-    "df_cpdm_b1_batch_1_2 = pd.read_csv(\"batch_1_2_cpdm_block_1_metauncertainty_by_subject.csv\")\n",
-    "df_cpdm_b2_batch_1_2 = pd.read_csv(\"batch_1_2_cpdm_block_2_metauncertainty_by_subject.csv\")\n",
-    "df_cpdm_b3_batch_1_2 = pd.read_csv(\"batch_1_2_cpdm_block_3_metauncertainty_by_subject.csv\")\n",
-    "df_cpdm_b4_batch_1_2 = pd.read_csv(\"batch_1_2_cpdm_block_4_metauncertainty_by_subject.csv\")\n",
-    "df_CRDM_analysis_batch_1_2 = pd.read_csv(\"batch_1_2_CRDM_analysis.csv\")\n",
+    "root_dir = \"/Users/govild2/National Institutes of Health/NIMH CDN lab - Documents/Experiments/1-Data/IDM/IDM-CloudResearch/\"\n",
+    "conf_dir = os.path.join(root_dir,\"Confidence_analysis/CASENDRE_output\")\n",
+    "value_dir = os.path.join(root_dir,\"IDM_Model_Output\")\n",
     "\n",
-    "#batch 3\n",
-    "df_cdd_batch_3 = pd.read_csv(\"batch_3_cdd_metauncertainty_by_subject.csv\")\n",
-    "df_crdm_batch_3 = pd.read_csv(\"batch_3_crdm_metauncertainty_by_subject.csv\")\n",
-    "df_cpdm_b1_batch_3 = pd.read_csv(\"batch_3_cpdm_block_1_metauncertainty_by_subject.csv\")\n",
-    "df_cpdm_b2_batch_3 = pd.read_csv(\"batch_3_cpdm_block_2_metauncertainty_by_subject.csv\")\n",
-    "df_cpdm_b3_batch_3 = pd.read_csv(\"batch_3_cpdm_block_3_metauncertainty_by_subject.csv\")\n",
-    "df_cpdm_b4_batch_3 = pd.read_csv(\"batch_3_cpdm_block_4_metauncertainty_by_subject.csv\")\n",
-    "df_CRDM_analysis_batch_3 = pd.read_csv(\"batch_3_CRDM_analysis.csv\")\n",
+    "tasks = ['crdm','cdd','cpdm_block_1','cpdm_block_2','cpdm_block_3','cpdm_block_4']\n",
+    "batches = [\"Batch_1_2\",\"Batch_3\",\"Batch_4\"]\n",
     "\n",
-    "#batch 4\n",
-    "df_cdd_batch_4 = pd.read_csv(\"batch_4_cdd_metauncertainty_by_subject.csv\")\n",
-    "df_crdm_batch_4 = pd.read_csv(\"batch_4_crdm_metauncertainty_by_subject.csv\")\n",
-    "df_cpdm_b1_batch_4 = pd.read_csv(\"batch_4_cpdm_block_1_metauncertainty_by_subject.csv\")\n",
-    "df_cpdm_b2_batch_4 = pd.read_csv(\"batch_4_cpdm_block_2_metauncertainty_by_subject.csv\")\n",
-    "df_cpdm_b3_batch_4 = pd.read_csv(\"batch_4_cpdm_block_3_metauncertainty_by_subject.csv\")\n",
-    "df_cpdm_b4_batch_4 = pd.read_csv(\"batch_4_cpdm_block_4_metauncertainty_by_subject.csv\")\n",
-    "df_CRDM_analysis_batch_4 = pd.read_csv(\"batch_4_CRDM_analysis.csv\")"
+    "df_batches = []\n",
+    "\n",
+    "for task in tasks:\n",
+    "    frames = []\n",
+    "    for batch in batches:\n",
+    "        idf = pd.read_csv(os.path.join(conf_dir,batch,\"{}_metauncertainty_by_subject.csv\".format(task)))\n",
+    "        frames = frames + [idf]\n",
+    "    df_batch = pd.concat(frames,ignore_index=True)\n",
+    "    df_batches = df_batches + [df_batch]\n",
+    "\n",
+    "[df_crdm_batches,df_cdd_batches,df_cpdm_b1_batches,df_cpdm_b2_batches,df_cpdm_b3_batches,df_cpdm_b4_batches] = df_batches\n",
+    "\n",
+    "frames = []\n",
+    "for batch in batches:\n",
+    "    idf = pd.read_csv(os.path.join(value_dir,batch,\"{}_CRDM_analysis.csv\".format(batch)))\n",
+    "    frames = frames + [idf]\n",
+    "df_total_CRDM_analysis = pd.concat(frames,ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                           subject  meta_cdd  meta_crdm  meta_cpdm_b1  \\\n",
+      "0          2023-02-15_16h52.30.817  1.849795   0.794381      0.554847   \n",
+      "1          2023-02-15_19h21.34.004  3.159738   3.285129     -0.517764   \n",
+      "2          2023-02-16_06h37.57.554  1.392724   1.392724      0.042016   \n",
+      "3                2023_05h14.47.829  0.343135   0.343135      0.409341   \n",
+      "4                2023_07h19.20.292  4.770927   4.770927      2.926460   \n",
+      "..                             ...       ...        ...           ...   \n",
+      "68  idm-v2_2023-02-23_18h24.45.747  1.456226   3.942905      0.142833   \n",
+      "69  idm-v2_2023-02-23_21h21.16.077  2.464399   0.594117      2.126070   \n",
+      "70  idm-v2_2023-02-23_22h57.50.523  1.302746   1.302746      1.299606   \n",
+      "71  idm-v2_2023-02-24_06h01.38.532  1.861603   2.392631      2.795078   \n",
+      "72  idm-v2_2023-02-24_10h56.00.832  4.999998   2.418044      1.586980   \n",
+      "\n",
+      "    meta_cpdm_b2  meta_cpdm_b3  meta_cpdm_b4          beta  \n",
+      "0       0.192868      0.341326      0.514202  6.349688e-01  \n",
+      "1       1.961464      2.030841      2.154314  1.000000e-08  \n",
+      "2       0.339603      0.219965      0.389338  6.652807e-01  \n",
+      "3       0.311167      0.591832      0.158110  3.008218e-01  \n",
+      "4       2.977828      0.303813      0.784765  2.161606e-01  \n",
+      "..           ...           ...           ...           ...  \n",
+      "68      0.192214      0.248584      0.117648  4.939061e-01  \n",
+      "69      1.673142      0.509500      0.888728  5.470819e-01  \n",
+      "70      0.261678      0.471804      0.213251  8.424267e-01  \n",
+      "71      1.389722      0.453355      0.588746  8.188351e-01  \n",
+      "72      2.367638      2.853381      2.996571  1.000000e-08  \n",
+      "\n",
+      "[73 rows x 8 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "#combine dfs\n",
     "#cdd\n",
-    "frames = [df_cdd_batch_1_2, df_cdd_batch_3, df_cdd_batch_4]\n",
-    "df_cdd_batches = pd.concat(frames,ignore_index=True)\n",
-    "#print(df_cdd_batches)\n",
+    "df_new = df_cdd_batches\n",
+    "df_new = df_new.rename(columns={'meta_uncertainty':'meta_cdd'})\n",
     "\n",
     "#crdm\n",
-    "frames = [df_crdm_batch_1_2, df_crdm_batch_3, df_crdm_batch_4]\n",
-    "df_crdm_batches = pd.concat(frames,ignore_index=True)\n",
     "\n",
+    "df_new['meta_crdm'] = df_crdm_batches.loc[df_crdm_batches['subject']==df_new['subject'],'meta_uncertainty']\n",
+    "\n",
+    "#cpdm\n",
     "#cpdm block 1\n",
-    "frames = [df_cpdm_b1_batch_1_2, df_cpdm_b1_batch_3, df_cpdm_b1_batch_4]\n",
-    "df_cpdm_b1_batches = pd.concat(frames,ignore_index=True)\n",
+    "\n",
+    "df_new['meta_cpdm_b1'] = df_cpdm_b1_batches.loc[df_cpdm_b1_batches['subject']==df_new['subject'],'meta_uncertainty']\n",
     "\n",
     "#cpdm block 2\n",
-    "frames = [df_cpdm_b2_batch_1_2, df_cpdm_b2_batch_3, df_cpdm_b2_batch_4]\n",
-    "df_cpdm_b2_batches = pd.concat(frames,ignore_index=True)\n",
+    "\n",
+    "df_new['meta_cpdm_b2'] = df_cpdm_b2_batches.loc[df_cpdm_b2_batches['subject']==df_new['subject'],'meta_uncertainty']\n",
     "\n",
     "#cpdm block 3\n",
-    "frames = [df_cpdm_b3_batch_1_2, df_cpdm_b3_batch_3, df_cpdm_b3_batch_4]\n",
-    "df_cpdm_b3_batches = pd.concat(frames,ignore_index=True)\n",
+    "\n",
+    "df_new['meta_cpdm_b3'] = df_cpdm_b3_batches.loc[df_cpdm_b3_batches['subject']==df_new['subject'],'meta_uncertainty']\n",
     "\n",
     "#cpdm block 4\n",
-    "frames = [df_cpdm_b4_batch_1_2, df_cpdm_b4_batch_3, df_cpdm_b4_batch_4]\n",
-    "df_cpdm_b4_batches = pd.concat(frames,ignore_index=True)\n",
     "\n",
+    "df_new['meta_cpdm_b4'] = df_cpdm_b4_batches.loc[df_cpdm_b4_batches['subject']==df_new['subject'],'meta_uncertainty']\n",
+    "\n",
+    "#print(df_new)\n",
     "#CRDM analyses (beta parameter)\n",
-    "frames = [df_CRDM_analysis_batch_1_2, df_CRDM_analysis_batch_3, df_CRDM_analysis_batch_4]\n",
-    "df_total_CRDM_analysis = pd.concat(frames,ignore_index=True)"
+    "df_total_CRDM_analysis = df_total_CRDM_analysis.sort_values(by=['subject']).reset_index(drop=True)\n",
+    "#print(df_total_CRDM_analysis)\n",
+    "df_new = df_new.sort_values(by=['subject']).reset_index(drop=True)\n",
+    "df_new['beta'] = df_total_CRDM_analysis.loc[df_total_CRDM_analysis['subject']==df_new['subject'],'beta']\n",
+    "\n",
+    "print(df_new)\n",
+    "#print(df_total_CRDM_analysis['subject'])\n",
+    "#print(df_new['subject']) "
    ]
   },
   {
@@ -506,6 +543,14 @@
     "plt.plot(x, m*x+b,\"r-\")\n",
     "plt.title(f\"Pearson r: {corr['Pearson']['r']:.2f}, p-value: {corr['Pearson']['p-value']:.2e}\\nSpearman r: {corr['Spearman']['r']:.2f}, p-value: {corr['Spearman']['p-value']:.2e}\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1x1 plot of CPDM Meta-Uncertainty versus the Beta parameter (ambiguity aversion)"
+   ]
   }
  ],
  "metadata": {
@@ -524,12 +569,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "6b5b20ec0c470904e5f44754da6099b14478c0f3408a6836f97893874d5e67cd"
    }
   }
  },
